--- a/.github/workflows/add_identifiers.yml
+++ b/.github/workflows/add_identifiers.yml
@@ -4,12 +4,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  secrets:
-    uses: ./.github/workflows/validate_secrets.yml
-    secrets: inherit
+  #secrets:
+    #uses: ./.github/workflows/validate_secrets.yml
+    #secrets: inherit
     
   identifiers:
-    needs: secrets
+    #needs: secrets
     runs-on: macos-12
     steps:
       # Uncomment to manually select latest Xcode if needed
