add_identifiers: APPLE_PASSWORD, Fastfile: associate_group
use fastlane-credentials for apple ID app specific password

--- a/.github/workflows/add_identifiers.yml
+++ b/.github/workflows/add_identifiers.yml
@@ -26,9 +26,12 @@ jobs:
         
       # Create or update identifiers for app
       - name: Fastlane Provision
-        run: fastlane identifiers
+        run: |
+        fastlane fastlane-credentials add --username ${{ secrets.APPLE_ID }} --password ${{ secrets.APPLE_PASSWORD }}
+        fastlane identifiers
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           TEAMID: ${{ secrets.TEAMID }}
           GH_PAT: ${{ secrets.GH_PAT }}
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
