--- a/.github/workflows/add_identifiers.yml
+++ b/.github/workflows/add_identifiers.yml
@@ -23,7 +23,26 @@ jobs:
       # Patch Fastlane Match to not print tables
       - name: Patch Match Tables
         run: find /usr/local/lib/ruby/gems -name table_printer.rb | xargs sed -i "" "/puts(Terminal::Table.new(params))/d"
-        
+
+      # Authenticate using 2FA (for masking, see https://stackoverflow.com/questions/70558558/how-to-mask-environment-variables-created-in-github-when-running-a-workflow)
+      - name: Authenticate with App Store Connect
+        run: |
+          fastlane spaceauth -u ${{ secrets.APPLE_ID }}
+          echo "export FASTLANE_SESSION='$(cat ~/.fastlane/spaceship/${{ secrets.APPLE_ID }}/cookie)' >> $GITHUB_ENV"
+          echo "::add-mask::${{env.FASTLANE_SESSION}}"
+          echo "FASTLANE_SESSION=${{env.FASTLANE_SESSION}}" >> $GITHUB_ENV
+        env:
+          # secrets are masked by default
+          FASTLANE_SESSION: ${{secrets.FASTLANE_SESSION}}
+
+      ## Write new access token to secret access token
+      - uses: hmanzur/actions-set-secret@v2.0.0
+        with:
+          name: 'FASTLANE_SESSION'
+          value: ${{env.FASTLANE_SESSION}}
+          repository: ${{ github.repository }}
+          token: ${{ secrets.GH_PAT }}
+      
       # Create or update identifiers for app
       - name: Fastlane Provision
         run: |
@@ -38,3 +57,4 @@ jobs:
           FASTLANE_KEY_ID: ${{ secrets.FASTLANE_KEY_ID }}
           FASTLANE_ISSUER_ID: ${{ secrets.FASTLANE_ISSUER_ID }}
           FASTLANE_KEY: ${{ secrets.FASTLANE_KEY }}
+          FASTLANE_SESSION: ${{secrets.FASTLANE_SESSION}}
