Changes to build_loop.yml and update.yml:
build_loop.yml:
-Remove sync action from build_loop.yml
-build on schedule on the 1th every month for a predictable build schedule well within the 90 day TestFlight limit. The time of day should be chosen as a time where ongoing changes are unlikely during releases (nighttime).
-rename env TARGET_BRANCH to BUILD_BRANCH
- use current branch as BUILD_BRANCH for easy switching to building main or dev (manually insert alternative branch names as needed)

update.yml:
- check for updates every day
- use current branch name for UPSTREAM_BRANCH and TARGET_BRANCH, to easily switch between dev and main by changing default branch, without any code changes.
- do not run the upstream sync action on the upstream LoopKit repository
- time_elapsed: 50 days for keepalive action

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -10,14 +10,14 @@ name: 'Auto-update'
 on:
   workflow_dispatch:
   schedule:
-    - cron:  '0 7 * * 1,4'
-    # scheduled at 07:00 every Monday and Thursday
+    - cron:  '0 04 * * *'
+    # scheduled at 04:00 every day
 
 env:
   UPSTREAM_REPO: LoopKit/LoopWorkspace
-  UPSTREAM_BRANCH: main
-  TARGET_BRANCH: actions # target branch on fork to be kept "alive" for running scheduled workflows (repo activity required at least every 60 days for scheduled workflows to remain active)
-
+  UPSTREAM_BRANCH: ${{ github.ref_name }} # branch on upstream repository to sync from (relpace with specific branch name if needed)
+  TARGET_BRANCH: ${{ github.ref_name }} # target branch on fork to be kept in sync, and target branch on upstream to be kept alive (relpace with specific branch name if needed)
+  
 jobs:
   check_latest_from_upstream:
     runs-on: ubuntu-latest
@@ -39,6 +39,7 @@ jobs:
     # REQUIRED step
     # Step 2: run the sync action
     - name: Sync upstream changes
+      if: github.repository_owner != 'LoopKit' # do not run the upstream sync action on the upstream repository
       id: sync
       uses: aormsby/Fork-Sync-With-Upstream-action@v3.4
       with:
@@ -69,7 +70,7 @@ jobs:
       if: github.ref == 'refs/heads/${{ env.TARGET_BRANCH }}'
       uses: gautamkrishnar/keepalive-workflow@v1 # using the workflow with default settings
       with:
-        time_elapsed: 27 # Time elapsed from the previous commit to trigger a new automated commit (in days)
+        time_elapsed: 50 # Time elapsed from the previous commit to trigger a new automated commit (in days)
 
   # Launch build workflow if new commits are found
   launch_build_workflow:
