--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -7,11 +7,11 @@ on:
   ## Remove the "#" sign from the beginning of the line below to get automated builds on push (code changes in your repository)
   #push:
 
+  schedule:
+    - cron: '30 04 1 * *' # Runs at 04:30 UTC on the 1st every month
+
 env:
-  UPSTREAM_REPO: LoopKit/LoopWorkspace
-  UPSTREAM_BRANCH: main # upstream branch to sync from
-  TARGET_BRANCH: main # branch on fork to build from
-  SYNC_UPSTREAM: 'true' # set to 'false' or 'true' to disable / enable syncing of fork with upstream repository
+  BUILD_BRANCH: ${{ github.ref_name }} # branch on fork to build from (relpace with specific branch name if needed)
 
 jobs:
   secrets:
@@ -19,8 +19,8 @@ jobs:
     uses: ./.github/workflows/validate_secrets.yml
     secrets: inherit
 
-  upstream_sync_and_build:
-    name: Sync and build
+  build:
+    name: Build
     needs: secrets
     runs-on: macos-13
     steps:
@@ -33,34 +33,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-          ref: ${{ env.TARGET_BRANCH }} 
-      
-      # Run the sync action
-      - name: Sync upstream changes
-        if: ${{ env.SYNC_UPSTREAM == 'true' }}
-        id: sync
-        uses: aormsby/Fork-Sync-With-Upstream-action@v3.4
-        with:
-          target_sync_branch: ${{ env.TARGET_BRANCH }}
-          target_branch_checkout_args: --recurse-submodules
-          shallow_since: 6 months ago
-          # REQUIRED 'target_repo_token' exactly like this!
-          target_repo_token: ${{ secrets.GH_PAT }}
-          upstream_sync_branch: ${{ env.UPSTREAM_BRANCH }}
-          upstream_sync_repo: ${{ env.UPSTREAM_REPO }}
-          # upstream_repo_access_token: ${{ secrets.UPSTREAM_REPO_SECRET }}
-      
-      # Step 3: Display a sample message based on the sync output var 'has_new_commits'
-      - name: New commits found
-        if: steps.sync.outputs.has_new_commits == 'true'
-        run: echo "New commits were found to sync."
-    
-      - name: No new commits
-        if: steps.sync.outputs.has_new_commits == 'false'
-        run: echo "There were no new commits."
-      
-      - name: Show value of 'has_new_commits'
-        run: echo ${{ steps.sync.outputs.has_new_commits }}
+          ref: ${{ env.BUILD_BRANCH }} 
               
       # Customize Loop: Download and apply patches
       - name: Customize Loop
