--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,5 @@
 name: 'Auto-update'
+run-name: Auto-update (${{ github.ref_name }})
 
 # Runs only on schedule for the default branch
 # TARGET_BRANCH should be set as default
