--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Checkout target repo
       uses: actions/checkout@v3
       with:
+        token: ${{ secrets.GH_PAT }}
         ref: alive
 
     - name: Sync upstream changes
@@ -73,6 +74,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
         with:
+          token: ${{ secrets.GH_PAT }}
           submodules: recursive
           ref: ${{ env.TARGET_BRANCH }} 
 
