--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -29,6 +29,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         token: ${{ secrets.GH_PAT }}
+        submodules: recursive
         ref: alive
 
     - name: Sync upstream changes
