--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -15,7 +15,7 @@ env:
   UPSTREAM_BRANCH: ${{ github.ref_name }} # branch on upstream repository to sync from (relpace with specific branch name if needed)
   TARGET_BRANCH: ${{ github.ref_name }} # target branch on fork to be kept in sync, and target branch on upstream to be kept alive (relpace with specific branch name if needed)
   ALIVE_BRANCH: alive
-  SYNC_UPSTREAM: ${{ secrets.SYNC_UPSTREAM }} # set an optional "SYNC_UPSTREAM" repository secret to 'false' to disable syncing of fork with upstream repository
+  SYNC_UPSTREAM: ${{ vars.SYNC_UPSTREAM }} # set an optional "SYNC_UPSTREAM" repository variable to 'false' to disable syncing of fork with the upstream repository
 
 jobs:
   check_latest_from_upstream:
