--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -251,9 +251,15 @@ jobs:
       - name: Patch Match Tables
         run: find /usr/local/lib/ruby/gems -name table_printer.rb | xargs sed -i "" "/puts(Terminal::Table.new(params))/d"
       
+      # Install Bundler and project dependencies
+      - name: Install Bundler and project dependencies
+        run: |
+          gem install bundler
+          bundle install
+    
       # Build signed Loop IPA file
       - name: Fastlane Build & Archive
-        run: fastlane build_loop
+        run: bundle exec fastlane build_loop        
         env:
           TEAMID: ${{ secrets.TEAMID }}
           GH_PAT: ${{ secrets.GH_PAT }}
@@ -264,7 +270,7 @@ jobs:
       
       # Upload to TestFlight
       - name: Fastlane upload to TestFlight
-        run: fastlane release
+        run: bundle exec fastlane release
         env:
           TEAMID: ${{ secrets.TEAMID }}
           GH_PAT: ${{ secrets.GH_PAT }}
