--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -251,12 +251,10 @@ jobs:
       - name: Patch Match Tables
         run: find /usr/local/lib/ruby/gems -name table_printer.rb | xargs sed -i "" "/puts(Terminal::Table.new(params))/d"
       
-      # Install Bundler and project dependencies
-      - name: Install Bundler and project dependencies
-        run: |
-          gem install bundler
-          bundle install
-    
+      # Install project dependencies
+      - name: Install project dependencies
+        run: bundle install
+      
       # Build signed Loop IPA file
       - name: Fastlane Build & Archive
         run: bundle exec fastlane build_loop        
