validate_secrets.yml: add step 'Sync clock'
- name: Sync clock
        run: sudo sntp -sS time.windows.com

Workaround for errors like 

'Authentication credentials are missing or invalid. - Provide a properly configured and signed bearer token, and make sure that it has not expired.'

as suggested in https://github.com/actions/runner issue report 2996

--- a/.github/workflows/validate_secrets.yml
+++ b/.github/workflows/validate_secrets.yml
@@ -128,6 +128,9 @@ jobs:
       - name: Install Project Dependencies
         run: bundle install
       
+      - name: Sync clock
+        run: sudo sntp -sS time.windows.com
+      
       - name: Validate Fastlane Secrets
         run: |
           # Validate Fastlane Secrets
