--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -66,13 +66,13 @@ jobs:
     - name: Create alive branch
       if: env.ALIVE_BRANCH_EXISTS == 'false'
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       run: |
-        # Get ref for LoopKit/LoopWorkspace:dev
-        SHA=$(curl -sS https://api.github.com/repos/${{ env.UPSTREAM_REPO }}/git/refs \
-          | jq '.[] | select(.ref == "refs/heads/dev" ) | .object.sha' \
-          | tr -d '"'
-        );
+        SHA=$(curl --request GET \
+          --url "https://api.github.com/repos/${{ env.UPSTREAM_REPO }}/git/refs/heads/dev" \
+          --header "Authorization: Bearer $GH_TOKEN" \
+          --silent | jq -r '.object.sha')
+        echo "SHA of dev branch: $SHA";
         
         # Create alive branch based on LoopKit/LoopWorkspace:dev
         gh api \
