--- a/.github/workflows/check_certs.yml
+++ b/.github/workflows/check_certs.yml
@@ -37,8 +37,13 @@ jobs:
         id: set_output
         run: |
           if [ -f cert_expired.txt ]; then
+            # Display the content of cert_expired.txt in the logs
+            echo "Content of cert_expired.txt:"
+            cat cert_expired.txt
             echo "cert_expired=$(cat cert_expired.txt)" >> $GITHUB_ENV
           else
+            echo "Content of cert_expired.txt:"
+            cat cert_expired.txt
             echo "cert_expired=false" >> $GITHUB_ENV
           fi
 
