Make the expiration check adjustable via a variable in the workflow

--- a/.github/workflows/check_certs.yml
+++ b/.github/workflows/check_certs.yml
@@ -4,6 +4,9 @@ run-name: Check Certificates (${{ github.ref_name }})
 on:
   workflow_dispatch:
 
+env:
+  EXPIRATION_WARNING_DAYS: 30
+  
 jobs:
   check_certs:
     runs-on: ubuntu-latest
