Set Output Using GITHUB_OUTPUT: The set_output step now writes to  instead of using ::set-output:

--- a/.github/workflows/check_certs.yml
+++ b/.github/workflows/check_certs.yml
@@ -42,9 +42,9 @@ jobs:
           CERT_EXPIRED_FILE="/home/runner/work/LoopWorkspace/LoopWorkspace/fastlane/cert_expired.txt"
           if [ -f "$CERT_EXPIRED_FILE" ]; then
             cert_expired=$(cat $CERT_EXPIRED_FILE)
-            echo "::set-output name=cert_expired::$cert_expired"
+            echo "cert_expired=$cert_expired" >> $GITHUB_OUTPUT
           else
-            echo "::set-output name=cert_expired::false"
+            echo "cert_expired=false" >> $GITHUB_OUTPUT
           fi
 
   # Nuke Certs if no valid certificate or certificate was nuked
