--- a/.github/workflows/check_certs.yml
+++ b/.github/workflows/check_certs.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Set output based on Fastlane result
         id: set_output
         run: |
-          CERT_STATUS_FILE="/home/runner/work/LoopWorkspace/LoopWorkspace/fastlane/new_certificate_needed.txt"
+          CERT_STATUS_FILE="${{ github.workspace }}/fastlane/new_certificate_needed.txt"
           if [ -f "$CERT_STATUS_FILE" ]; then
             CERT_STATUS=$(cat "$CERT_STATUS_FILE" | tr -d '\n' | tr -d '\r') # Read file content and strip newlines
             echo "new_certificate_needed: $CERT_STATUS"
