Require check_certs before building
Checks if Distribution certificate is present and valid, optionally nukes and reates new certs if the repository variable ENABLE_NUKE_CERTS == 'true'

--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -21,6 +21,14 @@ jobs:
     name: Validate
     uses: ./.github/workflows/validate_secrets.yml
     secrets: inherit
+
+  # Checks if Distribution certificate is present and valid, optionally nukes and
+  # creates new certs if the repository variable ENABLE_NUKE_CERTS == 'true'
+  check_certs: 
+      name: Check certificates
+      needs: validate
+      uses: ./.github/workflows/check_certs.yml
+      secrets: inherit
   
   # Checks if GH_PAT holds workflow permissions
   # Checks for existence of alive branch; if non-existent creates it
@@ -155,7 +163,7 @@ jobs:
   # Builds Loop
   build:
     name: Build
-    needs: [validate, check_alive_and_permissions, check_latest_from_upstream]
+    needs: [validate, check_alive_and_permissions, check_latest_from_upstream, check_certs]
     runs-on: macos-14
     permissions:
       contents: write
